# pinkrobot

./: .gitignore  README.md
contract/: Cargo.toml  lib.rs
contracts/: .gitignore  Cargo.toml  call-contract.sh  config.json
contracts/gateway/: Cargo.toml  lib.rs
contracts/pinkpsp34/: Cargo.toml  lib.rs
contracts/pinkpsp34/minting/: internal.rs  lib.rs  minting.rs  pink_minting.rs  pinkmint.rs  traits.rs
contracts/pinkrobot/: Cargo.toml  lib.rs
contracts/tests/: pinkrobot.spec.ts
frontend/: package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  index.tsx  metadata_psp34.json
frontend/src/components/: ArtistSelector.tsx  DryRunResult.tsx  Gallery.tsx  GenerateCustomUploadForm.tsx  GenerateForm.tsx  Header.tsx  Loader.tsx  ModelSelector.tsx  NewUserGuide.tsx  PinkContainer.tsx  StyleSelector.tsx  SubmitResult.tsx  TopInfo.tsx  Tweet.tsx  index.ts
frontend/src/const/: index.ts
frontend/src/contexts/: Estimation.tsx  LinkContract.tsx  PinkContract.tsx  PinkPsp34Contract.tsx
frontend/src/helpers/: output.ts
frontend/src/hooks/: useDryRun.ts  useMintHandler.ts  useSubmitHandler.ts
frontend/src/types/: PinkTypes.ts  index.ts
scripts/: common_api.ts  consts.ts  fetch.ts  package.json
